--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -13,8 +13,8 @@
     
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
-</head>
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}?v=1.1">
+    </head>
 <body data-bs-theme="dark">
 
     <div class="page-wrapper">
@@ -29,17 +29,16 @@
             <nav class="sidebar-nav">
                 <ul class="list-unstyled">
                     <li class="sidebar-item">
-                        <a href="{{ url_for('project.get_projects') }}" class="sidebar-link {% if 'project' in request.endpoint and 'get_projects' in request.endpoint %}active{% endif %}">
+                        <a href="{{ url_for('project.get_projects') }}" class="sidebar-link" data-section="home">
                             <i class="fas fa-home fa-fw me-2"></i> الرئيسية
                         </a>
                     </li>
 
-                    {% set is_project_section = 'project' in request.endpoint or 'item' in request.endpoint or 'sheets' in request.endpoint %}
                     <li class="sidebar-item">
-                        <a href="#projects-submenu" data-bs-toggle="collapse" class="sidebar-link {{ '' if is_project_section else 'collapsed' }}">
+                        <a href="#projects-submenu" data-bs-toggle="collapse" class="sidebar-link collapsed" data-section="project">
                             <i class="fas fa-project-diagram fa-fw me-2"></i> المشاريع
                         </a>
-                        <ul id="projects-submenu" class="list-unstyled collapse sidebar-submenu {{ 'show' if is_project_section }}">
+                        <ul id="projects-submenu" class="list-unstyled collapse sidebar-submenu">
                             <li><a href="{{ url_for('project.get_projects') }}" class="sidebar-submenu-link"><i class="fas fa-eye me-2"></i> عرض المشاريع</a></li>
                             {% if current_user.role == 'admin' %}
                             <li><a href="{{ url_for('project.new_project') }}" class="sidebar-submenu-link"><i class="fas fa-plus me-2"></i> إضافة مشروع</a></li>
@@ -53,12 +52,11 @@
                         </ul>
                     </li>
 
-                    {% set is_invoice_section = 'invoice' in request.endpoint %}
                     <li class="sidebar-item">
-                        <a href="#invoices-submenu" data-bs-toggle="collapse" class="sidebar-link {{ '' if is_invoice_section else 'collapsed' }}">
+                        <a href="#invoices-submenu" data-bs-toggle="collapse" class="sidebar-link collapsed" data-section="invoice">
                             <i class="fas fa-file-invoice-dollar fa-fw me-2"></i> المستخلصات
                         </a>
-                        <ul id="invoices-submenu" class="list-unstyled collapse sidebar-submenu {{ 'show' if is_invoice_section }}">
+                        <ul id="invoices-submenu" class="list-unstyled collapse sidebar-submenu">
                              <li><a href="#" class="sidebar-submenu-link text-muted"><i class="fas fa-eye me-2"></i>اختر مشروعاً للعرض:</a></li>
                              <hr class="sidebar-divider">
                              {% for project in sidebar_projects %}
@@ -77,12 +75,11 @@
                         </ul>
                     </li>
 
-                    {% set is_contractor_section = 'contractor' in request.endpoint %}
                     <li class="sidebar-item">
-                        <a href="#contractors-submenu" data-bs-toggle="collapse" class="sidebar-link {{ '' if is_contractor_section else 'collapsed' }}">
+                        <a href="#contractors-submenu" data-bs-toggle="collapse" class="sidebar-link collapsed" data-section="contractor">
                             <i class="fas fa-hard-hat fa-fw me-2"></i> المقاولون
                         </a>
-                        <ul id="contractors-submenu" class="list-unstyled collapse sidebar-submenu {{ 'show' if is_contractor_section }}">
+                        <ul id="contractors-submenu" class="list-unstyled collapse sidebar-submenu">
                             <li><a href="{{ url_for('contractor.get_contractors') }}" class="sidebar-submenu-link"><i class="fas fa-eye me-2"></i> عرض المقاولين</a></li>
                              {% if current_user.role == 'admin' %}
                             <li><a href="{{ url_for('contractor.new_contractor') }}" class="sidebar-submenu-link"><i class="fas fa-plus me-2"></i> إضافة مقاول</a></li>
@@ -98,7 +95,7 @@
                     
                     {% if current_user.role == 'admin' %}
                     <li class="sidebar-item">
-                        <a href="{{ url_for('auth.admin_dashboard') }}" class="sidebar-link {% if 'admin_dashboard' in request.endpoint %}active{% endif %}">
+                        <a href="{{ url_for('auth.admin_dashboard') }}" class="sidebar-link" data-section="admin">
                             <i class="fas fa-user-shield fa-fw me-2"></i> لوحة التحكم
                         </a>
                     </li>
@@ -160,7 +157,7 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="{{ url_for('static', filename='js/script.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/script.js') }}?v=1.1"></script>
     {% block scripts %}{% endblock %}
 </body>
 </html>
