--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -13,8 +13,8 @@
     
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}?v=1.1">
-    </head>
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}?v=1.2">
+</head>
 <body data-bs-theme="dark">
 
     <div class="page-wrapper">
@@ -29,16 +29,16 @@
             <nav class="sidebar-nav">
                 <ul class="list-unstyled">
                     <li class="sidebar-item">
-                        <a href="{{ url_for('project.get_projects') }}" class="sidebar-link" data-section="home">
+                        <a href="{{ url_for('project.get_projects') }}" class="sidebar-link">
                             <i class="fas fa-home fa-fw me-2"></i> الرئيسية
                         </a>
                     </li>
 
                     <li class="sidebar-item">
-                        <a href="#projects-submenu" data-bs-toggle="collapse" class="sidebar-link collapsed" data-section="project">
+                        <a href="#" class="sidebar-link sidebar-toggler">
                             <i class="fas fa-project-diagram fa-fw me-2"></i> المشاريع
                         </a>
-                        <ul id="projects-submenu" class="list-unstyled collapse sidebar-submenu">
+                        <ul class="list-unstyled sidebar-submenu">
                             <li><a href="{{ url_for('project.get_projects') }}" class="sidebar-submenu-link"><i class="fas fa-eye me-2"></i> عرض المشاريع</a></li>
                             {% if current_user.role == 'admin' %}
                             <li><a href="{{ url_for('project.new_project') }}" class="sidebar-submenu-link"><i class="fas fa-plus me-2"></i> إضافة مشروع</a></li>
@@ -53,10 +53,10 @@
                     </li>
 
                     <li class="sidebar-item">
-                        <a href="#invoices-submenu" data-bs-toggle="collapse" class="sidebar-link collapsed" data-section="invoice">
+                        <a href="#" class="sidebar-link sidebar-toggler">
                             <i class="fas fa-file-invoice-dollar fa-fw me-2"></i> المستخلصات
                         </a>
-                        <ul id="invoices-submenu" class="list-unstyled collapse sidebar-submenu">
+                        <ul class="list-unstyled sidebar-submenu">
                              <li><a href="#" class="sidebar-submenu-link text-muted"><i class="fas fa-eye me-2"></i>اختر مشروعاً للعرض:</a></li>
                              <hr class="sidebar-divider">
                              {% for project in sidebar_projects %}
@@ -76,10 +76,10 @@
                     </li>
 
                     <li class="sidebar-item">
-                        <a href="#contractors-submenu" data-bs-toggle="collapse" class="sidebar-link collapsed" data-section="contractor">
+                        <a href="#" class="sidebar-link sidebar-toggler">
                             <i class="fas fa-hard-hat fa-fw me-2"></i> المقاولون
                         </a>
-                        <ul id="contractors-submenu" class="list-unstyled collapse sidebar-submenu">
+                        <ul class="list-unstyled sidebar-submenu">
                             <li><a href="{{ url_for('contractor.get_contractors') }}" class="sidebar-submenu-link"><i class="fas fa-eye me-2"></i> عرض المقاولين</a></li>
                              {% if current_user.role == 'admin' %}
                             <li><a href="{{ url_for('contractor.new_contractor') }}" class="sidebar-submenu-link"><i class="fas fa-plus me-2"></i> إضافة مقاول</a></li>
@@ -95,7 +95,7 @@
                     
                     {% if current_user.role == 'admin' %}
                     <li class="sidebar-item">
-                        <a href="{{ url_for('auth.admin_dashboard') }}" class="sidebar-link" data-section="admin">
+                        <a href="{{ url_for('auth.admin_dashboard') }}" class="sidebar-link">
                             <i class="fas fa-user-shield fa-fw me-2"></i> لوحة التحكم
                         </a>
                     </li>
@@ -157,7 +157,7 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="{{ url_for('static', filename='js/script.js') }}?v=1.1"></script>
+    <script src="{{ url_for('static', filename='js/script.js') }}?v=1.2"></script>
     {% block scripts %}{% endblock %}
 </body>
 </html>
