--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -6,14 +6,14 @@
     <title>{% block title %}SawaednaCostApp{% endblock %}</title>
     
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preconnect" href="https://fonts.gstatic" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Tajawal:wght@400;500;700;800&display=swap" rel="stylesheet">
     
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.rtl.min.css" rel="stylesheet">
     
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}?v=1.2">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}?v=1.4">
 </head>
 <body data-bs-theme="dark">
 
@@ -38,59 +38,67 @@
                         <a href="#" class="sidebar-link sidebar-toggler">
                             <i class="fas fa-project-diagram fa-fw me-2"></i> المشاريع
                         </a>
-                        <ul class="list-unstyled sidebar-submenu">
-                            <li><a href="{{ url_for('project.get_projects') }}" class="sidebar-submenu-link"><i class="fas fa-eye me-2"></i> عرض المشاريع</a></li>
+                        <div class="sidebar-submenu">
+                            <a href="{{ url_for('project.get_projects') }}" class="sidebar-submenu-link"><i class="fas fa-eye me-2"></i> عرض المشاريع</a>
                             {% if current_user.role == 'admin' %}
-                            <li><a href="{{ url_for('project.new_project') }}" class="sidebar-submenu-link"><i class="fas fa-plus me-2"></i> إضافة مشروع</a></li>
+                            <a href="{{ url_for('project.new_project') }}" class="sidebar-submenu-link"><i class="fas fa-plus me-2"></i> إضافة مشروع</a>
                             {% endif %}
                             <hr class="sidebar-divider">
-                             {% for project in sidebar_projects %}
-                                <li><a href="{{ url_for('project.get_project', project_id=project.id) }}" class="sidebar-submenu-link" title="{{ project.name }}">{{ project.name | truncate(20) }}</a></li>
-                             {% else %}
-                                <li><span class="sidebar-submenu-link text-muted">لا توجد مشاريع.</span></li>
-                             {% endfor %}
-                        </ul>
+                            <a href="#" class="sidebar-submenu-link sidebar-toggler nested"><i class="fas fa-list me-2"></i> قائمة المشاريع</a>
+                            <div class="sidebar-submenu nested-menu">
+                                {% for project in sidebar_projects %}
+                                    <a href="{{ url_for('project.get_project', project_id=project.id) }}" class="sidebar-submenu-link" title="{{ project.name }}">{{ project.name | truncate(20) }}</a>
+                                {% else %}
+                                    <span class="sidebar-submenu-link text-muted">لا توجد مشاريع.</span>
+                                {% endfor %}
+                            </div>
+                        </div>
                     </li>
 
                     <li class="sidebar-item">
                         <a href="#" class="sidebar-link sidebar-toggler">
                             <i class="fas fa-file-invoice-dollar fa-fw me-2"></i> المستخلصات
                         </a>
-                        <ul class="list-unstyled sidebar-submenu">
-                             <li><a href="#" class="sidebar-submenu-link text-muted"><i class="fas fa-eye me-2"></i>اختر مشروعاً للعرض:</a></li>
-                             <hr class="sidebar-divider">
-                             {% for project in sidebar_projects %}
-                                <li><a href="{{ url_for('invoice.get_invoices_by_project', project_id=project.id) }}" class="sidebar-submenu-link" title="{{ project.name }}">{{ project.name | truncate(20) }}</a></li>
-                             {% else %}
-                                <li><span class="sidebar-submenu-link text-muted">لا توجد مشاريع.</span></li>
-                             {% endfor %}
-                             <hr class="sidebar-divider">
-                             <li><a href="#" class="sidebar-submenu-link text-muted"><i class="fas fa-plus me-2"></i>اختر مشروعاً للإضافة إليه:</a></li>
-                             <hr class="sidebar-divider">
-                             {% for project in sidebar_projects %}
-                                <li><a href="{{ url_for('invoice.new_invoice', project_id=project.id) }}" class="sidebar-submenu-link" title="{{ project.name }}">{{ project.name | truncate(20) }}</a></li>
-                             {% else %}
-                                <li><span class="sidebar-submenu-link text-muted">لا توجد مشاريع.</span></li>
-                             {% endfor %}
-                        </ul>
+                        <div class="sidebar-submenu">
+                            <a href="#" class="sidebar-submenu-link sidebar-toggler nested"><i class="fas fa-eye me-2"></i>اختر مشروعاً للعرض</a>
+                            <div class="sidebar-submenu nested-menu">
+                                {% for project in sidebar_projects %}
+                                    <a href="{{ url_for('invoice.get_invoices_by_project', project_id=project.id) }}" class="sidebar-submenu-link" title="{{ project.name }}">{{ project.name | truncate(20) }}</a>
+                                {% else %}
+                                    <span class="sidebar-submenu-link text-muted">لا توجد مشاريع.</span>
+                                {% endfor %}
+                            </div>
+                            <hr class="sidebar-divider">
+                            <a href="#" class="sidebar-submenu-link sidebar-toggler nested"><i class="fas fa-plus me-2"></i>اختر مشروعاً للإضافة إليه</a>
+                            <div class="sidebar-submenu nested-menu">
+                                {% for project in sidebar_projects %}
+                                    <a href="{{ url_for('invoice.new_invoice', project_id=project.id) }}" class="sidebar-submenu-link" title="{{ project.name }}">{{ project.name | truncate(20) }}</a>
+                                {% else %}
+                                    <span class="sidebar-submenu-link text-muted">لا توجد مشاريع.</span>
+                                {% endfor %}
+                            </div>
+                        </div>
                     </li>
 
                     <li class="sidebar-item">
                         <a href="#" class="sidebar-link sidebar-toggler">
                             <i class="fas fa-hard-hat fa-fw me-2"></i> المقاولون
                         </a>
-                        <ul class="list-unstyled sidebar-submenu">
-                            <li><a href="{{ url_for('contractor.get_contractors') }}" class="sidebar-submenu-link"><i class="fas fa-eye me-2"></i> عرض المقاولين</a></li>
+                        <div class="sidebar-submenu">
+                            <a href="{{ url_for('contractor.get_contractors') }}" class="sidebar-submenu-link"><i class="fas fa-eye me-2"></i> عرض المقاولين</a>
                              {% if current_user.role == 'admin' %}
-                            <li><a href="{{ url_for('contractor.new_contractor') }}" class="sidebar-submenu-link"><i class="fas fa-plus me-2"></i> إضافة مقاول</a></li>
+                            <a href="{{ url_for('contractor.new_contractor') }}" class="sidebar-submenu-link"><i class="fas fa-plus me-2"></i> إضافة مقاول</a>
                              {% endif %}
-                             <hr class="sidebar-divider">
-                             {% for contractor in sidebar_contractors %}
-                                <li><a href="{{ url_for('contractor.show_contractor', contractor_id=contractor.id) }}" class="sidebar-submenu-link" title="{{ contractor.name }}">{{ contractor.name | truncate(20) }}</a></li>
-                             {% else %}
-                                <li><span class="sidebar-submenu-link text-muted">لا يوجد مقاولون.</span></li>
-                             {% endfor %}
-                        </ul>
+                            <hr class="sidebar-divider">
+                            <a href="#" class="sidebar-submenu-link sidebar-toggler nested"><i class="fas fa-list me-2"></i> قائمة المقاولين</a>
+                            <div class="sidebar-submenu nested-menu">
+                                {% for contractor in sidebar_contractors %}
+                                    <a href="{{ url_for('contractor.show_contractor', contractor_id=contractor.id) }}" class="sidebar-submenu-link" title="{{ contractor.name }}">{{ contractor.name | truncate(20) }}</a>
+                                {% else %}
+                                    <span class="sidebar-submenu-link text-muted">لا يوجد مقاولون.</span>
+                                {% endfor %}
+                            </div>
+                        </div>
                     </li>
                     
                     {% if current_user.role == 'admin' %}
@@ -118,6 +126,7 @@
                 {% endif %}
             </div>
         </aside>
+
         <div class="main-content-wrapper">
             <header class="topbar">
                 <button class="btn btn-outline-secondary d-lg-none" id="open-sidebar-btn">
@@ -129,14 +138,13 @@
                     <span>إدارة التكاليف</span>
                 </a>
             </header>
-
             <main class="main-content">
                 <div class="container-fluid">
                     {% block content %}{% endblock %}
                 </div>
             </main>
         </div>
-        </div>
+    </div>
 
     <div class="toast-container position-fixed bottom-0 end-0 p-3">
         {% with messages = get_flashed_messages(with_categories=true) %}
@@ -157,7 +165,7 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="{{ url_for('static', filename='js/script.js') }}?v=1.2"></script>
+    <script src="{{ url_for('static', filename='js/script.js') }}?v=1.4"></script>
     {% block scripts %}{% endblock %}
 </body>
 </html>
