--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -6,7 +6,7 @@
     <title>{% block title %}SawaednaCostApp{% endblock %}</title>
     
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic" crossorigin>
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Tajawal:wght@400;500;700;800&display=swap" rel="stylesheet">
     
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.rtl.min.css" rel="stylesheet">
@@ -40,7 +40,7 @@
                         </a>
                         <div class="sidebar-submenu">
                             <a href="{{ url_for('project.get_projects') }}" class="sidebar-submenu-link"><i class="fas fa-eye me-2"></i> عرض المشاريع</a>
-                            {% if current_user.role == 'admin' %}
+                            {% if current_user.role in ['admin', 'sub-admin'] %}
                             <a href="{{ url_for('project.new_project') }}" class="sidebar-submenu-link"><i class="fas fa-plus me-2"></i> إضافة مشروع</a>
                             {% endif %}
                             <hr class="sidebar-divider">
@@ -86,7 +86,7 @@
                         </a>
                         <div class="sidebar-submenu">
                             <a href="{{ url_for('contractor.get_contractors') }}" class="sidebar-submenu-link"><i class="fas fa-eye me-2"></i> عرض المقاولين</a>
-                             {% if current_user.role == 'admin' %}
+                             {% if current_user.role in ['admin', 'sub-admin'] %}
                             <a href="{{ url_for('contractor.new_contractor') }}" class="sidebar-submenu-link"><i class="fas fa-plus me-2"></i> إضافة مقاول</a>
                              {% endif %}
                             <hr class="sidebar-divider">
